gateway/1.4/modules/ROOT/pages/flex-local-view-manage-logs.adoc
= Viewing and Managing Log Output
ifndef::env-site,env-github[]
include::_attributes.adoc[]
endif::[]
:imagesdir: ../assets/images

Anypoint Flex Gateway enables you to deliver runtime and access logging to any supported Fluent Bit {fluentbit-ver-var} output type. This enables you to configure `File` or `HTTP` logging outputs. This tutorial only demonstrates how to configure `File` or `HTTP` Fluent Bit output types. To configure different Fluent Bit output types for third party services, see xref:flex-local-third-party-logs-config.adoc[].

As well as being able to configure Fluent Bit logging output types, Flex Gateway maintains standard output,`flex-gateway-fluent`, runtime and access logs. You do not need to configure these logs. To view `flex-gateway-fluent` logs, see <<view-logs, View Logs>>. Use the standard output logs for quick logging checks where an additional logging output is not needed.

You configure logs for Flex Gateway running in local mode via a configuration YAML file described in this page. The logging configuration YAML file is also described in the xref:flex-local-configuration-reference-guide.adoc#logging[Declarative Configuration Reference Guide]. However, this page supplies a more detailed tutorial of log configuration.

== Runtime Logs

== Access Logs



To enable access logging, you must: 

. Configure the `File` or `HTTP` output.
. Apply the Message Logging policy via policy binding. See <<configuring-access-logs, Configuring Access Logs>>.


[cols="1a,1a,1a"]
|===
|image:install-linux-logo.png[20%,20%,xref="#linux-service"]
|image:install-docker-logo.png[25%,25%,xref="#docker-container"]
|image:install-kubernetes-logo.png[20%,20%,xref="#kubernetes-ingress-controller"]

|<<linux-service,Configure Log Output for Flex Gateway as a Linux Service>>
|<<docker-container,Configure Log Output for Flex Gateway in a Docker Container>>
|<<kubernetes-ingress-controller,Configure Log Output for Flex Gateway as a Kubernetes Ingress Controller>>
|===

[[linux-service]]
== Configure Log Output for Flex Gateway as a Linux Service

. Create a YAML configuration file in the Flex Gateway configuration directory:
+
[source,ssh]
----
sudo touch /usr/local/share/mulesoft/flex-gateway/conf.d/logs-config.yaml
----

. Update the file with your <<file-configuration-example, `File`>> or <<http-configuration-example, `HTTP`>> output configuration details.

[[docker-container]]
== Configure Log Output for Flex Gateway in a Docker Container

NOTE: If you have already added a volume for a folder with your
Flex Gateway configuration files, go to the last step.

. Stop your Flex Gateway and any replicas, using Ctrl+C.
. Create a folder in the directory with your Flex Gateway configuration files and name it `app`.
. Restart your Flex Gateway with an additional volume for the new `app` directory:
. Create and save a YAML file with your <<file-configuration-example, `File`>> or <<http-configuration-example, `HTTP`>> output configuration details.

[[kubernetes-ingress-controller]]
== Configure Log Output for Flex Gateway as a Kubernetes Ingress Controller

To configure logging for Flex Gateway, create a new resource using
a YAML configuration file with your <<file-configuration-example, `File`>> or <<http-configuration-example, `HTTP`>> output configuration details.

== Logging Configuration File

include::partial$logging-config-file.adoc[]

The following examples describe how to configure Flex Gateway logging with the `File` and `HTTP` outputs by using this configuration file.

== File Configuration Example

Configure Flex Gateway to send formatted runtime and access logs to a file called `log.txt` (Fluent Bit `File` output), located within `/var/log` directory. As an example, the following definition specifies a `spec.logging.outputs.type` value of `file`:

NOTE: For Docker, in `spec.logging.output.parameters.file`, replace `/var/log` with the absolute path to the mounted configuration directory.

----
apiVersion: gateway.mulesoft.com/v1alpha1
kind: Configuration
metadata:
  name: logging-config
spec:
  logging:
    outputs:
    - name: default
      type: file
      parameters:
        file: /var/log/log.txt # Docker: replace `/var/log` with the absolute path to the mounted configuration directory
        format: template
        template: |
          [{logger}][{level}][{kind}] {message}
    runtimeLogs:
      logLevel: info
      outputs:
      - default
    accessLogs:
      outputs:
      - default
----

== HTTP Configuration Example

In addition to configuring logging for Fluent Bit `File` output, you can also configure for Fluent Bit `HTTP` output. As an example, the following definition specifies a `spec.logging.outputs.type` value of `http`:

----
apiVersion: gateway.mulesoft.com/v1alpha1
kind: Configuration
metadata:
  name: logging-config
spec:
  logging:
    outputs:
    - name: default
      type: http
      parameters:
        host: collectors.au.sumologic.com
        port: "443"
        URI: /receiver/v1/http/[PrivateKey]
        format: json_lines
        json_date_key: timestamp
        json_date_format: iso8601
    runtimeLogs:
      logLevel: info
      outputs:
      - default
    accessLogs:
      outputs:
      - default
----


[[access-logs]]
== COnfiguring Access Logs

After specifying access log output (as described in the previous configuration examples), you must enable access logs via policy binding. 

For inline configurations, enable access logs by adding `message-logging-flex` to the `spec.policies` section of `ApiInstance`. The following is an inline configuration example:

----
apiVersion: gateway.mulesoft.com/v1alpha1
kind: ApiInstance
metadata:
  name: jsonplaceholder-api
spec:
  address: http://0.0.0.0:8080
  services:
    jsonplaceholder:
      address: https://jsonplaceholder.typicode.com:443/
      routes:
        - rules:
            - path: /api(/users/.*)
  policies:
    - policyRef:
        name: message-logging-flex
      config:
        loggingConfiguration:
          - itemName: "Access Log Request"
            itemData:
              message: "#[attributes.version ++ ' ' ++ attributes.method ++ ' ' ++ attributes.requestUri]"
              level: "INFO"
              firstSection: true
          - itemName: "Access Log Response"
            itemData:
              message: "#[attributes.statusCode ++ ' ' ++ (attributes.headers['content-length'] default '')]"
              level: "INFO"
              secondSection: true
----

For resource-based configurations, enable access logs by adding `message-logging-flex` to the `spec.policyRef` section of `PolicyBinding`. The following is a resource-based configuration example:

----
apiVersion: gateway.mulesoft.com/v1alpha1
kind: PolicyBinding
metadata:
  name: ingress-http-access-logs
spec:
  targetRef:
    kind: ApiInstance
    name: ingress-http
  policyRef:
    kind: Extension
    name: message-logging-flex
  config:
    loggingConfiguration:
      - itemName: "Access Log Request"
        itemData:
          message: "#[attributes.version ++ ' ' ++ attributes.method ++ ' ' ++ attributes.requestUri]"
          level: "INFO"
          firstSection: true
      - itemName: "Access Log Response"
        itemData:
          message: "#[attributes.statusCode ++ ' ' ++ (attributes.headers['content-length'] default '')]"
          level: "INFO"
          secondSection: true
----

For more information about message logging configuration, see xref:policies::policies-included-message-logging.adoc[].

== View Logs

Flex Gateway also records standard output, `flex-gateway-fluent`, logs seprate from the logs you configured in this tutorial. To view the standard output logs, run the following commands:

For Linux:
[source,ssh]
----
journalctl -u flex-gateway
----

For Docker:
[source,ssh]
----
docker logs -f <container-id>
----

For Kubernetes:
[source,ssh]
----
kubectl logs -f <pod-name>
----

== See Also

* xref:policies::policies-included-message-logging.adoc[]
* https://docs.fluentbit.io/manual/v/1.8/pipeline/outputs[Fluent Bit Outputs documentation ^]
* xref:flex-local-third-party-logs-config.adoc[]